# airplay-esp32

./: .gitignore  .gitmodules  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.esparagus-audio-brick  sdkconfig.defaults.ota  sdkconfig.defaults.wrover
.github/workflows/: ci-release.yml
components/audio-resampler/: CMakeLists.txt  resampler.c
components/boards/: CMakeLists.txt  Kconfig.projbuild  partitions-2m.csv  partitions-4m-ota.csv  partitions-4m-single.csv
components/boards/esp32-generic/: board.c  iot_board.h
components/boards/esparagus-audio-brick/: board.c  iot_board.h
components/boards/squeezeamp/: board.c
components/dac_tas57xx/: Kconfig  dac_tas57xx.c
components/dac_tas58xx/: dac_tas58xx.c  dac_tas58xx_eq.h  dac_tas58xx_eq_data.h
components/display/: CMakeLists.txt  display.c
components/display/include/: display.h
docs/: hardware_design_ES9018K2M.md  hardware_design_ESP32_chip.md  schematic_ES9018K2M.md  schematic_ESP32_chip.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  led.c  main.c  settings.c  settings.h
main/audio/: a2dp_sink.c  a2dp_sink.h  audio_decoder.c  audio_output.c  audio_output_spdif.c  audio_receiver.c  audio_receiver.h  audio_receiver_internal.h  audio_resample.c  audio_stream.c  audio_stream_realtime.c  audio_timing.c  audio_timing.h
main/network/: ethernet.c  ethernet.h  mdns_airplay.c  mdns_airplay.h  ota.c  ota.h  web_server.c  wifi.c  wifi.h
main/plist/: bplist_parser.c
main/rtsp/: rtsp_events.c  rtsp_handlers.c  rtsp_server.c
